--- a/Clinic/UI.csproj
+++ b/Clinic/UI.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\BLL\BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Files\Photos\" />
+  </ItemGroup>
+
 </Project>
